static/css/style.css
:root {
  --pico-primary: #1C7258 !important;
  --pico-primary-background: #1C7258 !important;
  --pico-primary-underline: #1C7258 !important;
  --pico-primary-hover: #31c79a !important;
  --pico-primary-hover-background: #31c79a !important;
  --pico-font-size: 100% !important;
  --pico-background-color: #fdfdfd !important;
  --pico-font-family: "Open Sans", sans-serif;
  --pico-font-weight: 380;
}

#logo {
  display: block;
  margin: 1em auto;
  float: left;
  max-height: 3em;
  margin-top: 0;
}

body > header, body > footer {
  text-align: center;
}

h4, h5 a {
  text-decoration: none;
}

h1, h2, h3, h4, h5 {
  --pico-font-weight: 425;
  text-align: left;
}

hr {
  width: 50%;
  margin: 50px auto;
}

figure {
    text-align: center;
    padding: 1em;
}


footer p {
    font-size: 0.8em;
}

footer a {
    font-size: 1.2em;
    text-decoration: none;
}

footer .attribution a {
  font-size: 0.9em;
}
nav {
  display: inline-block;
  justify-content: normal;
}

nav a {
  margin: 0 5px;
  float: right;
}

article header {
  text-align: center;
}

.hero {
  padding: 2em;
  background-color: var(--pico-primary);
  overflow: hidden;
  position: relative;
}

.hero-bg {
  opacity: 0.1;
  position: absolute;
  left: 0;
  top: -50%;
  width: 100%;
  height: auto;
}

.hero-content {
  margin: 0 auto;
  width: 50%;
  text-align: left;
}

.hero-content > * {
  --pico-font-weight: 425;
  color: #fff !important;
  position: relative;
}

.hero-content a[role=button] {
  color: var(--pico-primary);
  background-color: var(--pico-primary-inverse);
}

.hero-content a {
  color: var(--pico-primary-hover);
}

.icon {
  padding-bottom: 0.75em;
}

.services-home article {
  box-shadow: none;
}

.expertise article, 
.services article {
  text-align: left;
  font-size: 0.9em;
}

.members article img {
  width: 65%;
}

.members article header {
    text-align: center;
}

.members article header img {
  border-radius: 300px;
  margin: 1em;
}

.members article header a {
  text-decoration: none;
}

@media (min-width: 25%) {
  .services-home .grid {
    grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
  }
}

@media (min-width: 768px) {
  .services .grid {
    grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
  }
}

@media (min-width: 768px) {
  .expertise .grid {
    grid-template-columns: repeat(auto-fill, minmax(16%, 1fr));
  }
}

